# AutoCluster

./: CMakeLists.txt
data/: cluster1.csv  cluster10.csv  cluster11.csv  cluster12.csv  cluster13.csv  cluster14.csv  cluster15.csv  cluster16.csv  cluster2.csv  cluster3.csv  cluster4.csv  cluster5.csv  cluster6.csv  cluster7.csv  cluster8.csv
include/: BoundaryProcessor.h  ClusterManager.h  ClusterNodes.h  InputParser.h  NodeCalculations.h  NodeProcessor.h
src/: BoundaryProcessor.cpp  ClusterManager.cpp  ClusterNodes.cpp  InputParser.cpp  NodeCalculations.cpp  NodeProcessor.cpp  main.cpp
testing/: CodeTesting.xlsx
